syntax = "proto3";

package proto;
option go_package = "./proto;proto";

message CpuInfo {
    string model_name = 1;
}

message CpuInfoList {
    repeated CpuInfo cpu_infos = 1;
}
